Add capability to return all facets of a specific metric.